# zeus

./: .editorconfig  .gitignore  .releaserc.yml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: firmware.yml
api/: zeus.yaml
firmware/: .gitignore  CMakeLists.txt
firmware/config/: esp32  esp32-debug  sdkconfig-release
firmware/main/: CMakeLists.txt  git.c  git.h  http.c  http.h  net.c  net.h  semver.c  semver.h  update.c  update.h  util.h  zeus.c
